--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,11 @@ AC_PREREQ([2.61])
 AC_INIT([gtk-layer-shell], [0.1], [wm@wmww.sh])
 AM_INIT_AUTOMAKE
 
+AC_PROG_CC
+
+LT_PREREQ([2.2])
+LT_INIT([])
+
 AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
 
 AC_OUTPUT
