--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,3 @@
 include_HEADERS = header.h
-dnl (comment) otherincludedir = $(includedir)/other
-dnl (comment) otherinclude_HEADERS = other/other.h
+# otherincludedir = $(includedir)/other
+# otherinclude_HEADERS = other/other.h
