--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,6 @@ AC_PROG_CC
 LT_PREREQ([2.2])
 LT_INIT([])
 
-AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile include/Makefile src/Makefile example/Makefile])
 
 AC_OUTPUT
