--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CFLAGS = -I$(top_srcdir)/include
 lib_LTLIBRARIES = libgtk-layer-shell.la
 libgtk_layer_shell_la_SOURCES = lib.c
 # libgtk_layer_shell_la_LIBADD = -l libraries
