--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS = -I$(top_srcdir)/include
+AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
 lib_LTLIBRARIES = libgtk-layer-shell.la
 libgtk_layer_shell_la_SOURCES = lib.c
-# libgtk_layer_shell_la_LIBADD = -l libraries
+libgtk_layer_shell_la_LIBADD = $(GTK_LIBS)
 AUTOMAKE_OPTIONS = subdir-objects
