--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS = -I$(top_srcdir)/include
+AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
 bin_PROGRAMS = example
 example_SOURCES = main.c
-example_LDADD = ../src/libgtk-layer-shell.la
+example_LDADD = ../src/libgtk-layer-shell.la $(GTK_LIBS)
