Remove junk automake files

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_PREREQ([2.61])
 AC_INIT([gtk-layer-shell], [0.1], [wm@wmww.sh])
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([-Wall foreign])
 
 AC_PROG_CC
 
