Add Wayland protocols

--- a/configure.ac
+++ b/configure.ac
@@ -11,6 +11,8 @@ PKG_CHECK_MODULES(GTK, [gtk+-3.0 >= 3.22])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-AC_CONFIG_FILES([Makefile include/Makefile src/Makefile example/Makefile])
+PKG_CHECK_MODULES(WAYLAND_SCANNER, [wayland-scanner])
+
+AC_CONFIG_FILES([Makefile include/Makefile src/Makefile src/protocol/Makefile example/Makefile])
 
 AC_OUTPUT
