--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,8 @@
 AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
 lib_LIBRARIES = libgtk-layer-shell.a
-libgtk_layer_shell_a_SOURCES = lib.c
+libgtk_layer_shell_a_SOURCES = \
+	lib.c \
+	protocol/xdg-shell.c \
+	protocol/wlr-layer-shell-unstable-v1.c
 AUTOMAKE_OPTIONS = subdir-objects
+SUBDIRS = protocol
