--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,4 @@
 AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
-lib_LTLIBRARIES = libgtk-layer-shell.la
-libgtk_layer_shell_la_SOURCES = lib.c
-libgtk_layer_shell_la_LIBADD = $(GTK_LIBS)
+lib_LIBRARIES = libgtk-layer-shell.a
+libgtk_layer_shell_a_SOURCES = lib.c
 AUTOMAKE_OPTIONS = subdir-objects
