--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,7 @@ AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
 lib_LIBRARIES = libgtk-layer-shell.a
 libgtk_layer_shell_a_SOURCES = \
 	gtk-layer-shell.c \
+	gdk-window-hack.c \
 	protocol/xdg-shell.c \
 	protocol/wlr-layer-shell-unstable-v1.c
 AUTOMAKE_OPTIONS = subdir-objects
