Start reorg of internals

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,9 @@ AM_CFLAGS = -I$(top_srcdir)/include $(GTK_CFLAGS)
 lib_LIBRARIES = libgtk-layer-shell.a
 libgtk_layer_shell_a_SOURCES = \
 	gtk-layer-shell.c \
+	gtk-wayland.c \
+	custom-shell-surface.c \
+	layer-surface.c \
 	gdk-window-hack.c \
 	simple-conversions.c \
 	protocol/xdg-shell.c \
