--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,2 +1,4 @@
-include_HEADERS = \
+install_headersdir = $(includedir)/gtk-layer-shell
+install_headers_HEADERS = \
 	gtk-layer-shell.h
+pkgconfig_DATA = gtk-layer-shell-0.pc
