Remove pedantic warnings

--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,10 @@ project('gtk-layer-shell',
     meson_version: '>=0.45.1',
     default_options: ['c_std=c99', 'warning_level=3'])
 
+add_global_arguments(
+    ['-Wno-pedantic'],
+    language: 'c')
+
 gtk = dependency('gtk+-wayland-3.0', version: '>=3.22.0')
 wayland_client = dependency('wayland-client', version: '>=1.10.0')
 # wayland_scanner is required, but we can find it without pkg-config
