Add option to disable examples

--- a/example/meson.build
+++ b/example/meson.build
@@ -1,6 +1,6 @@
 example = executable('gtk-layer-example',
     'example.c',
+    build_by_default: get_option('examples'),
     dependencies: [gtk],
     include_directories: [gtk_layer_shell_inc],
-    link_with: [gtk_layer_shell_lib],
-    install: true)
+    link_with: [gtk_layer_shell_lib])
