First stab at gtk-doc for wmww/gtk-layer-shell#26

--- a/meson.build
+++ b/meson.build
@@ -21,6 +21,7 @@ subdir('include')
 subdir('src')
 subdir('example')
 subdir('demo')
+subdir('doc')
 
 gtk_layer_shell_dep = declare_dependency(
     link_with: gtk_layer_shell_lib,
