Demo: add version info

--- a/demo/meson.build
+++ b/demo/meson.build
@@ -5,6 +5,7 @@ demo = executable('gtk-layer-demo',
     'layer-selection.c',
     'monitor-selection.c',
     'mscl-toggles.c',
+    'version-info.c',
     'menu-bar.c',
     build_by_default: get_option('examples'),
     dependencies: [gtk],
