Change license to LGPLv3 in meson

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('gtk-layer-shell',
     ['c'],
     version: '0.2.0',
-    license: 'MIT',
+    license: 'LGPLv3',
     meson_version: '>=0.45.1',
     default_options: ['c_std=gnu11', 'warning_level=3'])
 
