--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Install depends
       run: sudo apt install meson libwayland-dev libgtk-3-dev gobject-introspection libgirepository1.0-dev
     - name: Meson
-      run: meson build
+      run: meson build -Dexamples=true -Ddocs=true
     - name: Build
       run: ninja -C build
