--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install depends
-      run: sudo apt install meson libwayland-dev libgtk-3-dev gobject-introspection libgirepository1.0-dev
+      run: sudo apt install meson libwayland-dev libgtk-3-dev gobject-introspection libgirepository1.0-dev gtk-doc-tools
     - name: Meson
       run: meson build -Dexamples=true -Ddocs=true
     - name: Build
