Add license check to CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,5 @@ jobs:
       run: meson build -Dexamples=true -Ddocs=true
     - name: Build
       run: ninja -C build
+    - name: Check licenses
+      run: ./src/check_license.py
