--- a/src/meson.build
+++ b/src/meson.build
@@ -14,7 +14,7 @@ gtk_layer_shell_lib = library('gtk-layer-shell',
     srcs,
     xdg_shell_client_header, xdg_shell_private_code,
     layer_shell_client_header, layer_shell_private_code,
-    include_directories: [gtk_layer_shell_inc],
+    include_directories: [gtk_layer_shell_inc, gtk_priv_inc],
     dependencies: [gtk, wayland_client],
     version: meson.project_version(),
     install: true)
