Use system xdg-shell protocol when available.
This change matters when linking as a static library or meson subproject
to the project that is already building xdg-shell protocol of a
different version. In this case linker would prefer symbols from the
main project.
If both the main project and the subproject are using the same xdg-shell
protocol definition from the system wayland-protocols, the chance of
things going wrong is slightly lesser

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,8 @@ gtk = dependency('gtk+-wayland-3.0', version: '>=3.22.0')
 wayland_client = dependency('wayland-client', version: '>=1.10.0')
 # wayland_scanner is required, but we can find it without pkg-config
 wayland_scanner = dependency('wayland-scanner', version: '>=1.10.0', required: false)
+# use system xdg-shell protocol when available
+wayland_protocols = dependency('wayland-protocols', version: '>=1.16', required: false)
 
 pkg_config = import('pkgconfig')
 gnome = import('gnome')
