Refactor protocol generating meson code

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,9 +11,7 @@ srcs = files(
     'simple-conversions.c')
 
 gtk_layer_shell_lib = library('gtk-layer-shell',
-    srcs,
-    xdg_shell_client_header, xdg_shell_private_code,
-    layer_shell_client_header, layer_shell_private_code,
+    srcs, protocol_srcs,
     include_directories: [gtk_layer_shell_inc, gtk_priv_inc],
     dependencies: [gtk, wayland_client],
     version: meson.project_version(),
