--- a/src/protocol/meson.build
+++ b/src/protocol/meson.build
@@ -4,13 +4,17 @@ else
     prog_wayland_scanner = find_program('wayland-scanner')
 endif
 
+protocols = [
+    'wlr-layer-shell-unstable-v1.xml'
+]
+
 if wayland_protocols.found()
-    xdg_shell_proto = join_paths(
+    protocols += join_paths(
         wayland_protocols.get_pkgconfig_variable('pkgdatadir'),
         'stable/xdg-shell/xdg-shell.xml')
 else
-    # use bundled xdg-shell.xml from wayland-protocols-1.16
-    xdg_shell_proto = 'xdg-shell.xml'
+    # use bundled xdg-shell.xml
+    protocols += 'xdg-shell.xml'
 endif
 
 gen_client_header = generator(prog_wayland_scanner,
@@ -22,8 +26,9 @@ gen_private_code = generator(prog_wayland_scanner,
     arguments: ['-c', 'code', '@INPUT@', '@BUILD_DIR@/@BASENAME@.c'])
 # 'code' is deprecated, and can be replaced with 'private-code' when all platforms have a new enough wayland-scanner
 
-xdg_shell_client_header = gen_client_header.process(xdg_shell_proto)
-xdg_shell_private_code = gen_private_code.process(xdg_shell_proto)
+protocol_srcs = []
 
-layer_shell_client_header = gen_client_header.process('wlr-layer-shell-unstable-v1.xml')
-layer_shell_private_code = gen_private_code.process('wlr-layer-shell-unstable-v1.xml')
+foreach protocol : protocols
+    protocol_srcs += gen_client_header.process(protocol)
+    protocol_srcs += gen_private_code.process(protocol)
+endforeach
