Add initial test client and mock server (not yet working)

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
 option('examples', type: 'boolean', value: false, description: 'Build example applications')
 option('docs', type: 'boolean', value: false, description: 'Build devhelp API documentation')
+option('tests', type: 'boolean', value: false, description: 'Build tests')
