Generate server protocols

--- a/protocol/meson.build
+++ b/protocol/meson.build
@@ -21,14 +21,22 @@ gen_client_header = generator(prog_wayland_scanner,
     output: ['@BASENAME@-client.h'],
     arguments: ['-c', 'client-header', '@INPUT@', '@BUILD_DIR@/@BASENAME@-client.h'])
 
+gen_server_header = generator(prog_wayland_scanner,
+    output: ['@BASENAME@-server.h'],
+    arguments: ['-c', 'server-header', '@INPUT@', '@BUILD_DIR@/@BASENAME@-server.h'])
+
 gen_private_code = generator(prog_wayland_scanner,
     output: ['@BASENAME@.c'],
     arguments: ['-c', 'code', '@INPUT@', '@BUILD_DIR@/@BASENAME@.c'])
 # 'code' is deprecated, and can be replaced with 'private-code' when all platforms have a new enough wayland-scanner
 
-protocol_srcs = []
+client_protocol_srcs = []
+server_protocol_srcs = []
 
 foreach protocol : protocols
-    protocol_srcs += gen_client_header.process(protocol)
-    protocol_srcs += gen_private_code.process(protocol)
+    client_header = gen_client_header.process(protocol)
+    server_header = gen_server_header.process(protocol)
+    code = gen_private_code.process(protocol)
+    client_protocol_srcs += [client_header, code]
+    server_protocol_srcs += [server_header, code]
 endforeach
