--- a/test/mock-server/meson.build
+++ b/test/mock-server/meson.build
@@ -1,5 +1,5 @@
 mock_server = executable(
     'mock-server',
-    ['mock-server.c'],
+    ['mock-server.c'], server_protocol_srcs,
     c_args: ['-Wno-unused-parameter'],
     dependencies: [wayland_server])
