Implemented minimum mock Wayland compositor to run a GTK app

--- a/test/mock-server/meson.build
+++ b/test/mock-server/meson.build
@@ -1,5 +1,14 @@
+mock_server_srcs = [
+    'mock-server.h',
+    'mock-server.c',
+    'compositor.c',
+    'seat.c',
+    'shm.c',
+    'xdg-shell.c',
+]
+
 mock_server = executable(
     'mock-server',
-    ['mock-server.c'], server_protocol_srcs,
+    mock_server_srcs, server_protocol_srcs,
     c_args: ['-Wno-unused-parameter'],
     dependencies: [wayland_server])
