--- a/test/mock-server/meson.build
+++ b/test/mock-server/meson.build
@@ -1,10 +1,7 @@
 mock_server_srcs = [
     'mock-server.h',
     'mock-server.c',
-    'compositor.c',
-    'seat.c',
-    'xdg-shell.c',
-    'layer-shell.c',
+    'request-overrides.c',
 ]
 
 mock_server = executable(
