--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: 'Library and demos build'
+name: 'Builds and tests pass'
 
 on:
   push:
@@ -14,6 +14,8 @@ jobs:
     - name: Install depends
       run: sudo apt install meson libwayland-dev libgtk-3-dev gobject-introspection libgirepository1.0-dev gtk-doc-tools
     - name: Meson
-      run: meson build -Dexamples=true -Ddocs=true
+      run: meson build -Dexamples=true -Ddocs=true -Dtests=true
     - name: Build
       run: ninja -C build
+    - name: Test
+      run: ninja -C build test
