Pull out test helpers into test-client-common

--- a/test/meson.build
+++ b/test/meson.build
@@ -3,15 +3,21 @@ subdir('mock-server')
 test_clients = [
     'basic-test',
 ]
-
+test_client_common_inc = include_directories('test-client-common')
 py = find_program('python3')
 
+
 foreach test_client : test_clients
+    srcs = [
+        'test-client-common/test-client-common.h',
+        'test-client-common/test-client-common.c',
+        'test-clients/' + test_client + '.c',
+    ]
     exe = executable(
         test_client,
-        'test-clients/' + test_client + '.c',
+        srcs,
         dependencies: [gtk],
-        include_directories: [gtk_layer_shell_inc],
+        include_directories: [gtk_layer_shell_inc, test_client_common_inc],
         link_with: [gtk_layer_shell_lib])
     test(
         test_client,
