--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: 'Builds and tests pass'
+name: 'Build library and run tests'
 
 on:
   push:
@@ -17,6 +17,8 @@ jobs:
       run: sudo apt install meson libwayland-dev libgtk-3-dev gobject-introspection libgirepository1.0-dev gtk-doc-tools
     - name: Meson
       run: meson build -Dexamples=true -Ddocs=true -Dtests=true
+      env:
+        CFLAGS: -Werror
     - name: Build
       run: ninja -C build
     - name: Test
