Make SO version explicit

--- a/src/meson.build
+++ b/src/meson.build
@@ -20,6 +20,7 @@ gtk_layer_shell_lib = library('gtk-layer-shell',
     include_directories: [gtk_layer_shell_inc, gtk_priv_inc],
     dependencies: [gtk, wayland_client],
     version: meson.project_version(),
+    soversion: lib_so_version,
     install: true)
 
 pkg_config_name = 'gtk-layer-shell-0'
