--- a/test/meson.build
+++ b/test/meson.build
@@ -10,6 +10,7 @@ test_clients = [
     'test-auto-exclusive-zone-no-margin',
     'test-auto-exclusive-zone-with-margin',
     'test-menu-popup',
+    'test-window-with-initially-attached-buffer',
 ]
 
 test_client_common_inc = include_directories('test-client-common')
