Improve anchor tests

--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -3,7 +3,8 @@ integration_tests = [
     'test-expect-fail',
     'test-creation-properties',
     'test-is-layer-window',
-    'test-anchors',
+    'test-single-anchors',
+    'test-multi-anchors',
     'test-set-layer',
     'test-get-layer',
     'test-set-size-request',
