--- a/test/meson.build
+++ b/test/meson.build
@@ -29,3 +29,6 @@ endforeach
 
 check_licenses_script = files(meson.current_source_dir() + '/check-licenses.py')
 test('check-licenses', py, args: [check_licenses_script])
+
+check_tests_in_meson_script = files(meson.current_source_dir() + '/check-all-tests-are-in-meson.py')
+test('check-all-tests-are-in-meson', py, args: [check_tests_in_meson_script])
