--- a/examples/meson.build
+++ b/examples/meson.build
@@ -9,9 +9,11 @@ demo = executable(
     link_with: [gtk_layer_shell_lib],
     install: get_option('examples'))
 
-example = executable('gtk-layer-example',
-    'example.c',
+example = executable(
+    'simple-example',
+    files('simple-example.c'),
     build_by_default: get_option('examples'),
     dependencies: [gtk],
     include_directories: [gtk_layer_shell_inc],
-    link_with: [gtk_layer_shell_lib])
+    link_with: [gtk_layer_shell_lib],
+    install: false)
