--- a/test/mock-server/meson.build
+++ b/test/mock-server/meson.build
@@ -1,12 +1,10 @@
-mock_server_srcs = [
+mock_server_srcs = files(
     'mock-server.h',
     'mock-server.c',
-    'overrides.c',
-]
+    'overrides.c')
 
 mock_server = executable(
     'mock-server',
     mock_server_srcs, server_protocol_srcs,
     c_args: ['-Wno-unused-parameter'],
-    include_directories: [test_common_inc],
-    dependencies: [wayland_server])
+    dependencies: [wayland_server, test_common])
