--- a/test/unit-tests/meson.build
+++ b/test/unit-tests/meson.build
@@ -1,7 +1,6 @@
 test_get_version = executable(
     'test-get-version',
     files('test-get-version.c'),
-    dependencies: [gtk],
-    include_directories: [gtk_layer_shell_inc, test_common_inc],
-    link_with: [gtk_layer_shell_lib])
+    dependencies: [gtk, gtk_layer_shell, test_common])
+
 test('test-get-version', test_get_version, args: [meson.project_version()])
