--- a/examples/meson.build
+++ b/examples/meson.build
@@ -1,19 +1,15 @@
 subdir('demo')
 
-demo = executable(
+executable(
     'gtk-layer-demo',
     demo_srcs,
     build_by_default: get_option('examples'),
-    dependencies: [gtk],
-    include_directories: [gtk_layer_shell_inc],
-    link_with: [gtk_layer_shell_lib],
+    dependencies: [gtk, gtk_layer_shell],
     install: get_option('examples'))
 
-example = executable(
-    'simple-example',
+executable(
+    'simple-example-c',
     files('simple-example.c'),
     build_by_default: get_option('examples'),
-    dependencies: [gtk],
-    include_directories: [gtk_layer_shell_inc],
-    link_with: [gtk_layer_shell_lib],
+    dependencies: [gtk, gtk_layer_shell],
     install: false)
