Update demo with new keyboard interactivity options

--- a/examples/demo/meson.build
+++ b/examples/demo/meson.build
@@ -6,4 +6,5 @@ demo_srcs = files(
     'monitor-selection.c',
     'mscl-toggles.c',
     'version-info.c',
-    'menu-bar.c')
+    'menu-bar.c',
+    'keyboard-selection.c')
