Add subsurface test

--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -26,4 +26,5 @@ integration_tests = [
     'test-get-keyboard-interactivity',
     'test-get-monitor',
     'test-set-monitor',
+    'test-create-subsurface',
 ]
