--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -24,6 +24,7 @@ integration_tests = [
     'test-get-namespace-custom-namespace',
     'test-set-keyboard-interactivity',
     'test-get-keyboard-interactivity',
+    'test-get-keyboard-interactivity-types',
     'test-get-monitor',
     'test-set-monitor',
 ]
