add test for setting keyboard interactivity

--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -23,6 +23,7 @@ integration_tests = [
     'test-get-namespace-on-non-layer-window',
     'test-get-namespace-custom-namespace',
     'test-set-keyboard-interactivity',
+    'test-set-keyboard-interactivity-types',
     'test-get-keyboard-interactivity',
     'test-get-keyboard-interactivity-types',
     'test-get-monitor',
