--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -23,9 +23,9 @@ integration_tests = [
     'test-get-namespace-on-non-layer-window',
     'test-get-namespace-custom-namespace',
     'test-set-keyboard-interactivity',
-    'test-set-keyboard-interactivity-types',
+    'test-set-keyboard-mode',
     'test-get-keyboard-interactivity',
-    'test-get-keyboard-interactivity-types',
+    'test-get-keyboard-mode',
     'test-get-monitor',
     'test-set-monitor',
     'test-create-subsurface',
