--- a/examples/meson.build
+++ b/examples/meson.build
@@ -1,12 +1,12 @@
-subdir('demo')
+#subdir('demo')
 # vala-standalone is it's own meson project, so do not subdir() it
 
-executable(
-    'gtk-layer-demo',
-    demo_srcs,
-    build_by_default: get_option('examples'),
-    dependencies: [gtk, gtk_layer_shell],
-    install: get_option('examples'))
+#executable(
+#    'gtk-layer-demo',
+#    demo_srcs,
+#    build_by_default: get_option('examples'),
+#    dependencies: [gtk, gtk_layer_shell],
+#    install: get_option('examples'))
 
 executable(
     'simple-example-c',
