meson: Allow disabling gobject-introspection at build time
Add an "introspection" option to the Meson build system which allows
toggling generation of GObject-Introspection data. This can be useful
for systems where G-I is not needed or not used. The option is enabled
by default to preserve the old behaviour if it is not explicitly set.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,4 @@
 option('examples', type: 'boolean', value: false, description: 'Build example applications')
 option('docs', type: 'boolean', value: false, description: 'Build devhelp API documentation')
 option('tests', type: 'boolean', value: false, description: 'Build tests')
+option('introspection', type: 'boolean', value: true, description: 'Build gobject-introspection data')
