--- a/src/meson.build
+++ b/src/meson.build
@@ -26,18 +26,20 @@ gtk_layer_shell_lib = library('gtk-layer-shell',
 pkg_config_name = 'gtk-layer-shell-0'
 
 # GObject introspection file used to interface with other languages
-gir = gnome.generate_gir(
-    gtk_layer_shell_lib,
-    dependencies: [gtk],
-    sources: srcs + files('../include/gtk-layer-shell.h'),
-    namespace: 'GtkLayerShell',
-    nsversion: '0.1',
-    identifier_prefix: 'GtkLayerShell',
-    symbol_prefix: 'gtk_layer',
-    export_packages: pkg_config_name,
-    includes: [ 'Gtk-3.0' ],
-    header: 'gtk-layer-shell/gtk-layer-shell.h',
-    install: true)
+if get_option('introspection')
+    gir = gnome.generate_gir(
+        gtk_layer_shell_lib,
+        dependencies: [gtk],
+        sources: srcs + files('../include/gtk-layer-shell.h'),
+        namespace: 'GtkLayerShell',
+        nsversion: '0.1',
+        identifier_prefix: 'GtkLayerShell',
+        symbol_prefix: 'gtk_layer',
+        export_packages: pkg_config_name,
+        includes: [ 'Gtk-3.0' ],
+        header: 'gtk-layer-shell/gtk-layer-shell.h',
+        install: true)
+endif
 
 pkg_config.generate(
     name: 'gtk-layer-shell',
