Add support for generating vapi files for Vala

--- a/examples/vala-standalone/meson.build
+++ b/examples/vala-standalone/meson.build
@@ -4,10 +4,10 @@ project('vala-gtk-layer-shell-example',
     license: 'MIT',
     meson_version: '>=0.45.1')
 
+gtk = dependency('gtk+-3.0')
+gtk_layer_shell = dependency('gtk-layer-shell-0')
+
 executable(
     'vala-layer-shell',
     files('main.vala'),
-    vala_args: ['--pkg=GtkLayerShell-0.1'],
-    dependencies: [
-        dependency('gtk+-3.0'),
-        meson.get_compiler('c').find_library('gtk-layer-shell')])
+    dependencies: [ gtk, gtk_layer_shell ])
