--- a/meson.build
+++ b/meson.build
@@ -18,7 +18,7 @@ wayland_client = dependency('wayland-client', version: '>=1.10.0')
 wayland_server = dependency('wayland-server', version: '>=1.10.0', required: false)
 
 # wayland_scanner is required, but we can find it without pkg-config
-wayland_scanner = dependency('wayland-scanner', version: '>=1.10.0', required: false)
+wayland_scanner = dependency('wayland-scanner', version: '>=1.10.0', required: false, native: true)
 
 # use system xdg-shell protocol when available
 wayland_protocols = dependency('wayland-protocols', version: '>=1.16', required: false)
