--- a/test/integration-tests/meson.build
+++ b/test/integration-tests/meson.build
@@ -34,4 +34,5 @@ integration_tests = [
     'test-set-monitor',
     'test-create-subsurface',
     'test-configure-delay-expect-fail',
+    'test-nested-popup-configure-delay-expect-fail',
 ]
